--- a/index.html
+++ b/index.html
@@ -58,10 +58,19 @@
       background:black;
       position: absolute;
       top:50%;
+      transform-origin: 100%;
+      transform: rotate(90deg);
+      transition: all 0.5s;
+      transition-timing-function: cubic-bezier(0.01, 2.51, 0.4, 1.01);
+
     }
   </style>
 
   <script>
+
+
+
+
   </script>
 </body>
 </html>
