--- a/index.html
+++ b/index.html
@@ -64,13 +64,43 @@
       transition-timing-function: cubic-bezier(0.01, 2.51, 0.4, 1.01);
 
     }
+
   </style>
+
+
+
+
 
   <script>
 
 
+      const secondHand = document.querySelector('.second-hand');
+
+
+      function setDate(){
+        const now = new Date();
+        const seconds = now.getSeconds();
+        const secondsDegrees = ((seconds/60) * 360);
+        secondHand.style.transform = `rotate(${secondsDegrees}deg)`;
+
+
+        console.log(secondsDegrees);
+      }
+
+
+      setInterval(setDate, 1000);
 
 
   </script>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
