--- a/index.html
+++ b/index.html
@@ -75,16 +75,26 @@
 
 
       const secondHand = document.querySelector('.second-hand');
+      const minHand = document.querySelector('.min-hand');
+      const hourHand = document.querySelector('.hour-hand');
 
 
       function setDate(){
         const now = new Date();
         const seconds = now.getSeconds();
-        const secondsDegrees = ((seconds/60) * 360);
+        const minutes = now.getMinutes();
+        const hour = now.getHours();
+
+        const secondsDegrees = ((seconds/60) * 360) + 90;
+        const minDegrees = ((minutes/60) * 360) + 90;
+        const hourDegrees = ((hour/60) * 360) + 90;
+
         secondHand.style.transform = `rotate(${secondsDegrees}deg)`;
+        minHand.style.transform = `rotate(${minDegrees}deg)`;
+        hourHand.style.transform = `rotate(${hourDegrees}deg)`;
 
+        //console.log(seconds);
 
-        console.log(secondsDegrees);
       }
 
 
